k8s/api_gateway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: arquitectura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: localhost:5000/api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080 # Puerto interno del cluster
      targetPort: 8080 # Puerto del contenedor
      nodePort: 30080 # PUERTO EXTERNO PARA ACCEDER DESDE EL HOST
