k8s/keycloak_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: arquitectura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: localhost:5000/keycloak:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command:
            - "/opt/keycloak/bin/kc.sh"
          args:
            - "start-dev"
            - "--import-realm"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: arquitectura
spec:
  selector:
    app: keycloak
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
