k8s/micro_notificaciones_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micronotificaciones-deployment
  namespace: arquitectura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: micronotificaciones
  template:
    metadata:
      labels:
        app: micronotificaciones
    spec:
      containers:
        - name: micronotificaciones
          image: localhost:5000/micronotificaciones:latest
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: micronotificaciones-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: micronotificaciones
  ports:
    - name: http
      port: 80
      targetPort: 8082
      nodePort: 30082
