k8s/microordenes_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microordenes-deployment
  namespace: arquitectura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microordenes
  template:
    metadata:
      labels:
        app: microordenes
    spec:
      containers:
        - name: microordenes
          image: localhost:5000/microordenes:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: microordenes-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: microordenes
  ports:
    - name: http
      port: 80 # Puerto interno del cluster
      targetPort: 8083 # Puerto real del contenedor
      nodePort: 30123 # Puerto expuesto fuera del cluster
