k8s/micropagos_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micropagos-deployment
  namespace: arquitectura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: micropagos
  template:
    metadata:
      labels:
        app: micropagos
    spec:
      containers:
        - name: micropagos
          image: localhost:5000/micropagos:latest # ✔ registry local
          ports:
            - containerPort: 8086
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: micropagos-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: micropagos
  ports:
    - name: http
      port: 80
      targetPort: 8086
      nodePort: 30086 # ✔ NodePort asignado
