k8s/microproductos_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microproductos-deployment
  namespace: arquitectura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microproductos
  template:
    metadata:
      labels:
        app: microproductos
    spec:
      containers:
        - name: microproductos
          image: localhost:5000/microproductos:latest
          ports:
            - containerPort: 8083
          resources:
            limits:
              cpu: "300m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: microproductos-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: microproductos
  ports:
    - name: http
      port: 80
      targetPort: 8083
      nodePort: 30083
