k8s/microusuarios_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microusuarios-deployment
  namespace: arquitectura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microusuarios
  template:
    metadata:
      labels:
        app: microusuarios
    spec:
      containers:
        - name: microusuarios
          image: localhost:5000/microusuarios:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: microusuarios-service
  namespace: arquitectura
spec:
  type: NodePort
  selector:
    app: microusuarios
  ports:
    - name: http
      port: 8080 # Puerto del Service interno
      targetPort: 8080 # Puerto en el contenedor .NET
      nodePort: 32703 # Puerto externo accesible desde fuera del cluster
